k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  labels:
    app: posts-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: ghcr.io/luff-org/posts-service:295137bebed0ea16053dd3491e859581a1c23ff5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '250m'
