k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
